# brew-control

./: .gitignore  Brewfile  Pipfile  README.md  brew.py  brewControlClient.py  deploy.sh  deploy_mac.sh  erins_mash_logger.py  mashAndHltControlClient.py  plot_brew.py  plot_log.py  pyproject.toml  reinstall_brew_control_lib.sh  reinstall_webduino_lib.sh  requirements.txt  setup_mac.sh  simpleMashControlClient.py
ArduinoControlServer/ArduinoControlServer/: ArduinoControlServer.ino  BrewControl.h  BrewState.h  Constants.h  Interrupts.h  PinCommand.h  Requests.h
BrewControl/: BrewControl.h  BrewControl.ino  BrewState.h  Constants.h  Interrupts.h  PinCommand.h  Requests.h
Webduino/: WebServer.h
brewControlServer/brewControlServer/: brewControl.h  brewControlServer.ino  verbosePrint.h
brew_control_client/: __init__.py  actuator.py  brew_control_client.py  brew_requests.py  brew_server.py  brew_state.py  controller.py  fake_server.py  flowrate_sensor.py  interlock.py  ml_stripper.py  pin_command.py  pin_config.py  thermistor.py
brew_control_client/tests/: test_actuator.py  test_brew_control_client.py  test_brew_requests.py  test_brew_server.py  test_brew_state.py  test_controller.py  test_fake_brew_server.py  test_flowrate_sensor.py  test_interlock.py  test_pin_command.py  test_pin_config.py  (+1 more)
tests/: test_actuator.py  test_brew_control_client.py  test_brew_requests.py  test_brew_server.py  test_brew_state.py  test_controller.py  test_fake_brew_server.py  test_flowrate_sensor.py  test_interlock.py  test_pin_command.py  test_pin_config.py  test_thermistor.py
(+10 files in other folders)
