[tool.poetry]
name = "brew_control_client"
version = "0.1.0"
description = "Controls our brewery."
authors = ["Michael Cannamela <m.cannamela@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
six = ">=1.10.0"
mock = ">=1.3.0"
requests = "^2.25.1"
matplotlib = "^3.4.2"
pytz = "^2021.1"
python-dateutil = "^2.8.1"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
